--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,3 +67,13 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# The mongo module
+module.mongo=${play.path}/modules/mongo
+
+# mongodb connection details
+mongo.host=localhost
+mongo.port=9000
+mongo.database=play
+
+mongo.username=studenthack
+mongo.password=reallyStrongPassword
